# zipbrute

./: Makefile  README.md  crc.c  crc.h  nopvm_main.c  pvm_lib.c  pvm_main.c  pwgen.c  pwgen_dict.c  pwgen_inc.c  pwgen_inc.h  zip.c  zip.h  zipbrute.c  zipbrute.h  zipbrute.java  zipbrute_global.c
c/: .gitignore  Makefile.am  bootstrap.sh  configure.ac  crc.h  nopvm_lib.c  nopvm_main.c  pvm_lib.c  pwgen_dict.h  zip.c  zipbrute.c  zipbrute.h  zipbrute_arch.c
c/old/: main.cc  x86zipbrute.S
c/src/: crc.c  nopvm_main.c  pwgen.c  pwgen.h  pwgen_inc.c  zip.h  zipbrute.c  zipbrute_arch.c  zipbrute_global.c
old/: zipbrute.cc
rust/: Cargo.toml  README.md  zipdata.txt
rust/src/: main.rs
