cargo-features = ["profile-rustflags"]
[package]
name = "rzipbrute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = {version = "4.5.4", features = ["derive"]}
cpu-time = "1.0.0"

[profile.release]
codegen-units = 1
rustflags = ["-Ctarget-cpu=native"]
